<resources>
    <string name="finaltitle">Result</string>
    <string name="freefall">Free Fall</string>
    <string name="crash">Crash</string>
    <string name="changemetricunits">Change Metric Units</string>
    <string name="app_name" translatable="false">ffallearl2018</string>
    <string name="freefalltocrash">Free Fall To Crash Converter</string>
    <string name="crashtofreefall">Crash To Free Fall Converter</string>
    <string name="calculate">Calculate</string>
    <string name="yolo">You Only Live Once</string>
    <string name="maths">Maths Dont Matter When Youre Dead</string>
    <string name="changeconverter">Change Converter</string>
</resources>
