<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/finaltitle"
        android:textAlignment="center"
        android:textColor="@android:color/white"

        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:padding="20dp"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/maths"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/freeFall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/freefall" />

        <Button
            android:id="@+id/crash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/crash" />
    </LinearLayout>

    <Button
        android:id="@+id/metricButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changemetricunits" />

</LinearLayout>