<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/freefalltitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/freefalltocrash"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/speedEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="number" />

    <Button


        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <TextView

            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/yolo"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40dp" />

    </LinearLayout>

    <Button

        android:id="@+id/converterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changeconverter" />

</LinearLayout>